# apertium-eng-spa

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  alt-pure.xsl  alt.xsl  apertium-en-es.en-es-poly.dix  apertium-en-es.en-es.adjectives.xml  apertium-en-es.en-es.adverbs.xml  apertium-en-es.en-es.conjunctions.xml  apertium-en-es.en-es.determiners.xml  apertium-en-es.en-es.dix  apertium-en-es.en-es.dix.xml  apertium-en-es.en-es.interjections.xml  apertium-en-es.en-es.lrx  apertium-en-es.en-es.nouns.xml  apertium-en-es.en-es.proper-nouns.xml  apertium-en-es.en-es.punctuation.xml  apertium-en-es.en-es.relatives.xml  apertium-en-es.en-es.t1x  apertium-en-es.en-es.t2x  apertium-en-es.en-es.t3x  apertium-en-es.en.dix  apertium-en-es.en.dixtmp1  apertium-en-es.en.metadix  apertium-en-es.en.metadix.xml  apertium-en-es.en.tsx  apertium-en-es.es-en-poly.dix  apertium-en-es.es-en.t1x  apertium-en-es.es-en.t2x  apertium-en-es.es-en.t3x  apertium-en-es.es.dix  apertium-en-es.es.dix.xml  apertium-en-es.es.tsx  apertium-en-es.post-es.dix  apertium-eng-spa.eng-spa-poly.dix  apertium-eng-spa.eng-spa.dix  apertium-eng-spa.eng-spa.lrx  (+21 more)
dev/: PhraseBook.csv  RuleEvaluation.rtf  SelectedRules  TestSentences.txt  apertium-en-es.en-es.ldx  apertium-en-es.en-es.lrx  apertium-en-es.en-es.manual2.lrx  apertium-eng-spa.eng-spa.manual2.lrx  biltrans-candidates  newstest2011-scr.es.sgmstripped  newstest2011-src.en.sgmstripped.biltrans  newstest2011-src.en.sgmstripped.en-es.withrules  newstest2011-src.eng.sgmstripped  newstest2011-src.eng.sgmstripped.eng-spa.withoutrules  sentences
dev/formatting-errors/: README  file1.html  file2.html  file3.html  file4.html  file5.html  file6.html
en-dic/: apertium-en-es.en.acronyms.xml  apertium-en-es.en.adjectives.xml  apertium-en-es.en.adverbs.xml  apertium-en-es.en.colloquial.xml  apertium-en-es.en.conjunctions.xml  apertium-en-es.en.determiners.xml  apertium-en-es.en.interjections.xml  apertium-en-es.en.metadix.xml  apertium-en-es.en.mw-nouns.xml  apertium-en-es.en.nouns.xml  apertium-en-es.en.numerals.xml  apertium-en-es.en.pardefs.xml  apertium-en-es.en.prepositions.xml  apertium-en-es.en.pronouns.xml  apertium-en-es.en.proper-nouns-ant.xml  apertium-en-es.en.proper-nouns.xml  apertium-en-es.en.punctuation.xml  apertium-en-es.en.relatives.xml  apertium-en-es.en.symbols.xml  apertium-en-es.en.verbs.xml  apertium-en-es.pardefs-url.xml
en-es-common/: apertium-en-es.pardefs-url.xml  apertium-en-es.symbols.xml
en-es-dic/: apertium-en-es.en-es.acronyms.xml  apertium-en-es.en-es.adjectives.xml  apertium-en-es.en-es.adverbs.xml  apertium-en-es.en-es.colloquial.xml  apertium-en-es.en-es.conjunctions.xml  apertium-en-es.en-es.determiners.xml  apertium-en-es.en-es.dix.xml  apertium-en-es.en-es.interjections.xml  apertium-en-es.en-es.mw-nouns.xml  apertium-en-es.en-es.nouns.xml  apertium-en-es.en-es.numerals.xml  apertium-en-es.en-es.pardefs.xml  apertium-en-es.en-es.prepositions.xml  apertium-en-es.en-es.pronouns.xml  apertium-en-es.en-es.proper-nouns-ant.xml  apertium-en-es.en-es.proper-nouns.xml  apertium-en-es.en-es.punctuation.xml  apertium-en-es.en-es.relatives.xml  apertium-en-es.en-es.symbols.xml  apertium-en-es.en-es.verbs.xml
es-dic/: apertium-en-es.es.acronyms.xml  apertium-en-es.es.adjectives.xml  apertium-en-es.es.adverbs.xml  apertium-en-es.es.colloquial.xml  apertium-en-es.es.conjunctions.xml  apertium-en-es.es.determiners.xml  apertium-en-es.es.dix.xml  apertium-en-es.es.interjections.xml  apertium-en-es.es.mw-nouns.xml  apertium-en-es.es.nouns.xml  apertium-en-es.es.numerals.xml  apertium-en-es.es.pardefs.xml  apertium-en-es.es.prepositions.xml  apertium-en-es.es.pronouns.xml  apertium-en-es.es.proper-nouns-ant.xml  apertium-en-es.es.proper-nouns.xml  apertium-en-es.es.punctuation.xml  apertium-en-es.es.relatives.xml  apertium-en-es.es.symbols.xml  apertium-en-es.es.verbs.xml  apertium-en-es.symbols.xml
incubator/: en-es-please-check.dix  en-es-to-translate.dix  en-unknown.txt  eng-spa-please-check.dix  eng-spa-to-translate.dix  lcfirst.pl
spa-tagger-data/: es.tagged  spa.tagged.txt
test/: eng-spa-chunker2-expected.txt  eng-spa-contrastive_grammar-chunker2-expected.txt  eng-spa-contrastive_grammar-generator-expected.txt  eng-spa-contrastive_grammar-input.txt  eng-spa-contrastive_grammar-interchunk-expected.txt  eng-spa-contrastive_grammar-lex-expected.txt  eng-spa-contrastive_grammar-morph-expected.txt  eng-spa-contrastive_grammar-postchunk-expected.txt  eng-spa-contrastive_grammar-postgen-expected.txt  eng-spa-contrastive_grammar-postgen-gold.txt  eng-spa-contrastive_grammar-pretransfer-expected.txt  eng-spa-generator-expected.txt  eng-spa-input.txt  eng-spa-interchunk-expected.txt  eng-spa-lex-expected.txt  eng-spa-morph-expected.txt  eng-spa-postchunk-expected.txt  eng-spa-postgen-gold.txt  eng-spa-tagger-expected.txt  spa-eng-chunker-expected.txt  spa-eng-contrastive_grammar-biltrans-expected.txt  spa-eng-contrastive_grammar-chunker-expected.txt  spa-eng-contrastive_grammar-generator-expected.txt  spa-eng-contrastive_grammar-input.txt  spa-eng-contrastive_grammar-interchunk-expected.txt  spa-eng-contrastive_grammar-morph-expected.txt  spa-eng-contrastive_grammar-postchunk-expected.txt  spa-eng-contrastive_grammar-postgen-expected.txt  spa-eng-contrastive_grammar-postgen-gold.txt  spa-eng-contrastive_grammar-pretransfer-expected.txt  spa-eng-contrastive_grammar-tagger-expected.txt  spa-eng-generator-expected.txt  spa-eng-input.txt  spa-eng-lex-expected.txt  spa-eng-morph-expected.txt  spa-eng-postchunk-expected.txt  spa-eng-postgen-expected.txt  spa-eng-postgen-gold.txt  spa-eng-pretransfer-expected.txt  tests.json
wikinews/: ceausescu-2010-07-21.apertium1-post.txt  ceausescu-2010-07-21.apertium1.txt  ceausescu-2010-07-21.babelfish.txt  ceausescu-2010-07-21.orig.txt  ceausescu-2010-07-21.promt.txt  china-2010-07-19.apertium1-post.txt  china-2010-07-19.apertium1.txt  china-2010-07-19.babelfish.txt  china-2010-07-19.google-edit.txt  china-2010-07-19.google.txt  china-2010-07-19.orig.txt  china-2010-07-19.promt.txt
